--- a/css/styles.css
+++ b/css/styles.css
@@ -1,189 +1,180 @@
-*,
-::after,
-::before {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box; }
-
-html {
-  font-size: 62.5%;
-  line-height: 1.15; }
+:root {
+  --c-primary: deeppink;
+  --c-black: #000;
+  --c-black1: #111;
+  --c-black3: #333;
+  --c-white: #fff;
+  --c-whitee: #eee;
+  --c-whited: #ddd;
+  --c-whitec: #ccc;
+  --c-whitea: #aaa;
+  --c-white5: #555; }
 
 body {
-  font-size: 16px;
-  color: #333;
   font-family: 'Alata', sans-serif;
-  background-color: #eee; }
+  font-weight: 500; }
 
-a {
-  text-decoration: none;
-  color: inherit;
-  cursor: pointer; }
+figure img {
+  width: 100%; }
 
-img {
-  width: 100%;
-  display: block; }
+::-webkit-scrollbar {
+  width: 3px;
+  height: 3px;
+  border-radius: 2px;
+  background-color: deeppink; }
+
+::-webkit-scrollbar-thumb {
+  border-radius: 2px;
+  background-color: rgba(255, 255, 255, 0.6); }
 
 .container {
-  width: 100%;
-  max-width: 400px;
+  width: 1240px;
+  max-width: 100%;
   padding: 0 20px;
   margin: 0 auto; }
 
 .nav {
   position: fixed;
-  z-index: 99999;
-  bottom: 0;
+  z-index: 2000;
+  width: 100%;
   left: 0;
-  width: 100%;
-  height: 70px; }
-  .nav.footer-nav,
-  .nav .navbar {
-    display: flex; }
-  .nav .navbar {
-    width: 100%; }
-    .nav .navbar.left-side, .nav .navbar.right-side {
-      max-width: 40%;
-      background-color: #333;
-      overflow: hidden; }
-      .nav .navbar.left-side .items, .nav .navbar.right-side .items {
-        width: 100%;
-        max-width: 50%; }
-    .nav .navbar.left-side {
-      border-top-right-radius: 16px; }
-    .nav .navbar.right-side {
-      border-top-left-radius: 16px; }
-    .nav .navbar.center-side {
-      max-width: 20%;
-      background-color: #333; }
-      .nav .navbar.center-side .items {
-        width: 100%;
-        position: relative;
-        z-index: 2; }
-        .nav .navbar.center-side .items::after {
-          content: "";
-          width: 100%;
-          height: 100%;
-          display: block;
-          background-color: #eee;
-          border-radius: 999px;
+  top: 0; }
+  .nav .nav-logo {
+    color: var(--c-primary); }
+  .nav.animated {
+    background-color: var(--c-black3); }
+  .nav > .container {
+    height: 100%;
+    display: flex;
+    align-items: center; }
+  @media only screen and (min-width: 1025px) {
+    .nav {
+      height: 80px; }
+      .nav .nav-logo {
+        font-size: 4rem; }
+      .nav .navbar {
+        margin-left: auto; }
+      .nav .nav-menu {
+        display: flex; }
+        .nav .nav-menu > .nav-item {
           position: relative;
-          transform: translateY(-28.5px) scaleY(0.9);
-          position: absolute;
-          z-index: -1;
-          top: 0;
-          left: 0; }
-      .nav .navbar.center-side .icons img {
-        top: 0;
-        transform: translate(-50%, -10px) scale(1); }
+          margin: 0 6px; }
+          .nav .nav-menu > .nav-item::before {
+            content: '';
+            width: 100%;
+            height: 20px;
+            position: absolute;
+            bottom: 0px;
+            left: 0; }
+          .nav .nav-menu > .nav-item:hover::before {
+            bottom: -20px; }
+          .nav .nav-menu > .nav-item:hover > .sub-menu {
+            opacity: 1;
+            visibility: visible;
+            transform: translate(-50%, 0); } }
+  @media only screen and (max-width: 1024px) {
+    .nav {
+      height: 60px; }
+      .nav .nav-logo {
+        font-size: 2rem; }
+      .nav .navbar {
+        position: fixed;
+        top: 60px;
+        right: 0;
+        width: 320px;
+        height: calc(100% - 60px);
+        border-left: 2px solid var(--c-white5);
+        background-color: var(--c-black3);
+        transform: translateX(100%);
+        transition: all 0.3s ease; }
+        .nav .navbar.open {
+          transform: translateX(0); }
+      .nav .nav-menu {
+        display: block;
+        padding: 20px; }
+        .nav .nav-menu > .nav-item {
+          margin: 10px 0; } }
 
-.icons {
-  width: 100%;
-  height: 100%;
+.nav-link {
   display: block;
-  text-align: center;
-  position: relative;
-  transition: all .3s ease;
-    /**&.icons--calendar img {
-        max-width: 40px;
-    }
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: var(--c-whitea); }
+  @media only screen and (min-width: 1025px) {
+    .nav-link {
+      font-size: 2rem;
+      padding: 4px 8px; }
+      .nav-link:hover {
+        color: var(--c-whitee); } }
+  @media only screen and (max-width: 1024px) {
+    .nav-link {
+      font-size: 1.6rem;
+      padding: 4px 0px; } }
 
-    &.icons--analytisc img {
-        max-width: 40px;
-    }
-
-    &.icons--people img {
-        max-width: 40px;
-    }
-
-    &.icons--analytics img {
-        max-width: 40px;
-    }
-
-    &.icons--recycle img {
-        max-width: 40px;
-    }
-
-    &.icons--phone img {
-        max-width: 40px;
-    }
-
-    &.icons--party img {
-        max-width: 40px;
-    }
-
-    &.icons--bus img {
-        max-width: 40px;
-    }**/ }
-  .icons.active img {
-    filter: invert(1) !important; }
-  .icons .notification-count {
+@media only screen and (min-width: 1025px) {
+  .sub-menu {
+    width: 250px;
     position: absolute;
-    z-index: 1;
-    width: 20px;
-    height: 20px;
-    top: 34px;
-    right: 28px;
-    font-size: 14px;
-    color: #333; }
-    .icons .notification-count.none {
-      display: none; }
-    .icons .notification-count::after {
-      content: '';
-      width: 22px;
-      height: 22px;
-      border: 2px solid #333;
-      border-radius: 999px;
-      position: absolute;
-      display: block;
-      top: -3px;
-      left: -1px;
-      background-color: #eee;
-      z-index: -1; }
-  .icons img {
-    position: absolute;
-    top: 50%;
+    top: 40px;
     left: 50%;
-    transform: translate(-50%, -50%) scale(0.55);
-    width: 50%;
-    filter: invert(0.5); }
-  .icons.icons--bell img {
-    max-width: 40px; }
-  @media only screen and (min-width: 400px) {
-    .icons:hover {
-      background-color: #333; }
-      .icons:hover img {
-        filter: invert(1); } }
-
-.lists {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  background-color: #fff;
-  padding: 10px 0;
-  border-radius: 10px;
-  margin-top: 60px; }
-  .lists .list__item {
-    width: 100%;
-    max-width: calc(100% / 3);
-    padding: 10px;
-    text-align: center;
-    margin-top: 10px; }
-  .lists .lists__nav {
-    width: 50px;
-    height: 50px;
-    position: relative;
-    display: block;
-    margin: 0 auto;
-    border-radius: 10px;
-    border: 2px solid #aaa; }
-    .lists .lists__nav img {
+    opacity: 0;
+    visibility: hidden;
+    border: 2px solid var(--c-whitee);
+    border-radius: 4px;
+    background-color: var(--c-black3);
+    transform: translate(-50%, 10px);
+    transition: all .1s linear; }
+    .sub-menu::after {
+      content: "";
+      border: 8px solid transparent;
+      border-bottom-color: var(--c-whitee);
       position: absolute;
-      top: 50%;
+      top: -16px;
       left: 50%;
-      transform: translate(-50%, -50%) scale(0.6); }
-  .lists .lists__title {
-    font-size: 13px;
-    margin-top: 10px; }
+      transform: translate(-50%, 0); }
+    .sub-menu .nav-link {
+      font-size: 1.6rem;
+      padding: 8px; }
+      .sub-menu .nav-link:hover {
+        background-color: var(--c-whitea); } }
+@media only screen and (max-width: 1024px) {
+  .sub-menu {
+    width: 100%;
+    display: none;
+    padding-left: 15px;
+    border-left: 2px solid var(--c-white5); }
+    .sub-menu > .nav-item {
+      margin: 10px 0; }
+    .sub-menu .nav-link {
+      font-size: 1.4rem; } }
+
+.nav-toggle {
+  display: none; }
+  @media only screen and (max-width: 1024px) {
+    .nav-toggle {
+      display: block;
+      width: 35px;
+      height: 35px;
+      margin-left: auto;
+      position: relative;
+      border: 1px solid var(--c-whitec);
+      border-radius: 4px;
+      cursor: pointer; }
+      .nav-toggle span {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 24px;
+        height: 2px;
+        background-color: var(--c-whitec);
+        transition: all 0.2s linear; }
+        .nav-toggle span:nth-child(1) {
+          transform: translate(-50%, -50%) translateY(-4px); }
+        .nav-toggle span:nth-child(2) {
+          transform: translate(-50%, -50%) translateY(3px); }
+      .nav-toggle.open span:nth-child(1) {
+        transform: translate(-50%, -50%) rotate(45deg); }
+      .nav-toggle.open span:nth-child(2) {
+        transform: translate(-50%, -50%) rotate(-45deg); } }
 
 /*# sourceMappingURL=styles.css.map */
