--- a/css/top.css
+++ b/css/top.css
@@ -1,5 +1,6 @@
 .mv {
-  height: 1000px;
-  background-color: #000; }
+  height: 3000px;
+  background-color: var(--c-main);
+}
 
 /*# sourceMappingURL=top.css.map */
