--- a/scss/top.scss
+++ b/scss/top.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
 .mv {
-    height: 1000px;
-    background-color: #000;
+    height: 3000px;
+    background-color: var(--c-main);
 }
