--- a/css/nav.css
+++ b/css/nav.css
@@ -1,17 +1,3 @@
-.nav--01 {
-  border-bottom: 1px solid #ccc;
-  background-color: #A1AAC1;
-  --nav-height: 80px;
-}
-.nav--01 > .nav-mask {
-  position: fixed;
-  z-index: -1;
-  top: var(--nav-height);
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #C5CEDA;
-}
 .nav--01 > .nav-container {
   width: 100%;
   height: var(--nav-height);
@@ -19,10 +5,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-.nav--01 .nav-logo {
-  font-size: 3rem;
-  color: #d8dce6;
 }
 .nav--01 .navbar {
   position: fixed;
@@ -94,6 +76,107 @@
   border-right-color: #d8dce6;
   margin-right: 15px;
   margin-left: -8px;
+}
+
+.nav--02 > .nav-container {
+  width: 100%;
+  height: var(--nav-height);
+  padding: 0 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.nav--02 .navbar {
+  position: fixed;
+  left: 0;
+  top: var(--nav-height);
+  width: 100%;
+  padding: 20px;
+  height: calc(100% - var(--nav-height));
+  transform-origin: bottom left;
+  transform: translateX(0);
+  transition: transform 0.4s ease, opacity 0.4s linear;
+}
+.nav--02 .navbar.active {
+  opacity: 1;
+  transform: translateX(0);
+}
+.nav--02 .nav-menu {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: flex-end;
+  position: relative;
+}
+.nav--02 .nav-menu > .nav-item {
+  margin-right: 10px;
+  margin-left: 10px;
+  animation: kf_falling 1s linear 0s 1 both;
+}
+.nav--02 .nav-item {
+  width: 80px;
+  display: flex;
+  flex-direction: column-reverse;
+}
+.nav--02 .nav-item.item-sub-menu > .nav-link::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -40%);
+  border-radius: 4px;
+  border-top: 0;
+  border-bottom: 16px solid #ACB6C6;
+  border-left: 24px solid transparent;
+  border-right: 24px solid transparent;
+}
+.nav--02 .nav-item.item-sub-menu.active > .nav-sub-menu {
+  opacity: 1;
+  max-height: 100vh;
+}
+.nav--02 .nav-item.item-sub-menu.active > .nav-sub-menu > .nav-item {
+  opacity: 1;
+  animation: kf_falling 1s linear 0s 1 both;
+}
+.nav--02 .nav-link {
+  width: 80px;
+  height: 80px;
+  border-radius: 999px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px 0;
+  margin-top: 6px;
+  font-size: 1.8rem;
+  color: red;
+  background-color: #ACB6C6;
+}
+.nav--02 .nav-sub-menu {
+  width: 100%;
+  max-height: 0;
+  display: flex;
+  flex-direction: column-reverse;
+  opacity: 0;
+  transition: opacity 0.4s linear, max-height 0.8s linear;
+}
+
+@keyframes kf_falling {
+  0% {
+    transform: translateY(-100vh);
+  }
+  30%, 70%, 90%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-200px);
+  }
+  80% {
+    transform: translateY(-100px);
+  }
+  95% {
+    transform: translateY(-30px);
+  }
 }
 
 /*# sourceMappingURL=nav.css.map */
