--- a/css/styled.css
+++ b/css/styled.css
@@ -1,200 +1,61 @@
-.nav {
-  position: fixed;
-  z-index: 2000;
-  width: 100%;
-  height: 60px;
-  left: 0;
-  top: 0;
-  background: var(--c-secondary);
-}
-.nav.animated {
-  background-color: var(--c-main);
-}
-.nav > .nav-container {
-  height: 100%;
-  display: flex;
-  align-items: center;
-}
-.nav .nav-logo {
-  font-size: 2rem;
-}
-.nav .navbar {
-  position: fixed;
-  top: 60px;
-  right: 0;
-  width: 320px;
-  height: calc(100% - 60px);
-  transform: translateX(100%);
-  transition: all 0.4s ease;
-}
-.nav .navbar.open {
-  transform: translateX(0);
-  background-color: var(--c-secondary);
-}
-.nav .nav-menu {
-  display: block;
-  padding: 20px;
-}
-.nav .nav-menu > .nav-item {
-  margin: 10px 0;
-}
-@media only screen and (min-width: 1025px) {
-  .nav {
-    height: 80px;
-  }
-  .nav .nav-logo {
-    font-size: 4rem;
-  }
-  .nav .navbar {
-    width: auto;
-    height: auto;
-    position: relative;
-    top: 0;
-    margin-left: auto;
-    transform: translateX(0);
-  }
-  .nav .nav-menu {
-    display: flex;
-    padding: 0;
-  }
-  .nav .nav-menu > .nav-item {
-    position: relative;
-    margin: 0 6px;
-    background-image: linear-gradient(var(--c-primary), var(--c-primary));
-    background-repeat: no-repeat;
-    background-size: 0 2px;
-    background-position: 0 100%;
-    transition: background-size 0.3s linear;
-  }
-  .nav .nav-menu > .nav-item > .nav-link {
-    font-size: 2rem;
-  }
-  .nav .nav-menu > .nav-item::after {
-    content: "";
-    width: 16px;
-    height: 16px;
-    border: 8px solid transparent;
-    border-top-color: var(--c-primary);
-    position: absolute;
-    bottom: -16px;
-    left: calc(50% - 8px);
-    opacity: 0;
-    transition: opacity 0.3s linear;
-    animation-name: kf_bounce01;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-  }
-  .nav .nav-menu > .nav-item::before {
-    content: "";
-    width: 100%;
-    height: 20px;
-    position: absolute;
-    bottom: 0px;
-    left: 0;
-  }
-  .nav .nav-menu > .nav-item.active:after {
-    opacity: 1;
-    animation-duration: 1s;
-  }
-  .nav .nav-menu > .nav-item:hover {
-    background-size: 100% 2px;
-  }
-  .nav .nav-menu > .nav-item:hover::before {
-    bottom: -20px;
-  }
-  .nav .nav-menu > .nav-item:hover > .sub-menu {
-    opacity: 1;
-    visibility: visible;
-    transform: translateY(0);
-  }
+main {
+  height: 100vh;
+  overflow: hidden;
 }
 
-@keyframes kf_bounce01 {
-  0%, 100% {
-    transform: translateY(0px);
+.loading {
+  position: fixed;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+.loading > .span {
+  display: block;
+  position: absolute;
+  background-color: #000;
+  animation-name: kf_default;
+  animation-iteration-count: 1;
+  animation-fill-mode: both;
+  animation-duration: 1s;
+}
+.loading > .span.zoom-in {
+  animation-name: kf_zoomin;
+}
+.loading > .span.bounce {
+  animation-name: kf_bounce;
+}
+
+@keyframes kf_default {
+  to {
+    opacity: 0;
   }
-  20%, 40%, 80% {
-    transform: translateY(-5px);
+}
+@keyframes kf_bounce {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  20% {
+    transform: scale(1.2);
   }
   60% {
-    transform: translateY(4px);
+    transform: scale(1);
   }
-}
-.nav-link {
-  color: var(--c-primary);
-  padding: 4px 0px;
-}
-@media only screen and (min-width: 1025px) {
-  .nav-link {
-    padding: 4px 8px;
-    transition: opacity 0.2s linear;
-  }
-  .nav-link:hover {
-    opacity: 0.4;
-  }
-}
-
-.sub-menu {
-  width: 100%;
-  padding: 0 15px;
-  border-left: 2px solid var(--c-main);
-}
-.sub-menu > .nav-item {
-  margin: 10px 0;
-}
-@media only screen and (min-width: 1025px) {
-  .sub-menu {
-    width: 250px;
-    position: absolute;
-    top: 50px;
-    right: 0;
+  100% {
+    transform: scale(1.1);
     opacity: 0;
-    visibility: hidden;
-    border-radius: 4px;
-    border: 4px solid var(--c-secondary);
-    background-color: var(--c-main);
-    transform: translateY(10px);
-    transition: transform 0.3s ease, opacity 0.2s linear, visibility 0.2s ease;
-  }
-  .sub-menu .nav-link {
-    padding: 8px;
   }
 }
-
-.nav-toggle {
-  display: block;
-  width: 34px;
-  height: 34px;
-  margin-left: auto;
-  position: relative;
-  border: 1px solid var(--c-primary);
-  border-radius: 4px;
-}
-.nav-toggle span {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 24px;
-  height: 2px;
-  border-radius: 2px;
-  background-color: var(--c-primary);
-  transition: all 0.2s linear;
-}
-.nav-toggle span:nth-child(1) {
-  transform: translate(-50%, -50%) translateY(-4px);
-}
-.nav-toggle span:nth-child(2) {
-  transform: translate(-50%, -50%) translateY(3px);
-}
-.nav-toggle.open span:nth-child(1) {
-  transform: translate(-50%, -50%) rotate(45deg);
-}
-.nav-toggle.open span:nth-child(2) {
-  transform: translate(-50%, -50%) rotate(135deg);
-}
-@media only screen and (min-width: 1025px) {
-  .nav-toggle {
-    display: none;
+@keyframes kf_zoomin {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(0.2);
   }
 }
 
