--- a/css/styled.css
+++ b/css/styled.css
@@ -18,10 +18,13 @@ main {
   animation-name: kf_default;
   animation-iteration-count: 1;
   animation-fill-mode: both;
-  animation-duration: 1s;
+  animation-duration: 1.5s;
 }
 .loading > .span.zoom-in {
   animation-name: kf_zoomin;
+}
+.loading > .span.fall-up {
+  animation-name: kf_fallup;
 }
 .loading > .span.bounce {
   animation-name: kf_bounce;
@@ -38,13 +41,19 @@ main {
     transform: scale(1);
   }
   20% {
+    transform: scale(0.8);
+  }
+  40% {
     transform: scale(1.2);
   }
-  60% {
+  75% {
+    transform: scale(0.6);
+  }
+  85% {
     transform: scale(1);
   }
   100% {
-    transform: scale(1.1);
+    transform: scale(0.6);
     opacity: 0;
   }
 }
@@ -56,6 +65,19 @@ main {
   100% {
     opacity: 0;
     transform: scale(0.2);
+  }
+}
+@keyframes kf_fallup {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  40%, 60% {
+    transform: translateY(0) scale(0.4);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(-100%) scale(0);
   }
 }
 
