--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -17,9 +17,21 @@ html {
 
 body {
     background-color: #fff;
+    color: #333;
     word-wrap: break-word;
     font-size: 1.6rem;
     line-height: 1.15;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+::-webkit-scrollbar {
+    width: 2px;
+    height: 2px;
+    background-color: #eee;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #333;
 }
 
 button,
