--- a/assets/plugins/anijs/ani.css
+++ b/assets/plugins/anijs/ani.css
@@ -58,18 +58,21 @@
   transform: scale(1);
 }
 
-.wave {
-  overflow: hidden;
-}
 .wave > span {
-  color: yellow;
+  color: pink;
   opacity: 0;
-  transform: translateY(100%);
-  transition-duration: 0.3s;
+  transition-duration: 0.5s;
   display: inline-block;
 }
+.wave.wave-up > span {
+  transform: translateY(100%);
+}
+.wave.wave-fall-down > span {
+  transform: translateY(-100px);
+  transition-duration: 0.05s;
+}
 .wave.animated > span {
-  color: blue;
+  color: deeppink;
   opacity: 1;
   transform: translateY(0);
 }
