--- a/css/styled.css
+++ b/css/styled.css
@@ -1,158 +1,1 @@
-main {
-  height: 100vh;
-  overflow: hidden;
-}
-
-.loading {
-  position: fixed;
-  z-index: 9999;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
-.loading > .span {
-  display: block;
-  position: absolute;
-  background-color: #000;
-  animation-name: kf_default;
-  animation-iteration-count: 1;
-  animation-fill-mode: both;
-  animation-duration: 1.5s;
-}
-.loading > .span.zoom-in {
-  animation-name: kf_zoomin;
-}
-.loading > .span.fall-up {
-  animation-name: kf_fallup;
-}
-.loading > .span.bounce {
-  animation-name: kf_bounce;
-}
-
-@keyframes kf_default {
-  to {
-    opacity: 0;
-  }
-}
-@keyframes kf_bounce {
-  0% {
-    opacity: 1;
-    transform: scale(1);
-  }
-  20% {
-    transform: scale(0.8);
-  }
-  40% {
-    transform: scale(1.2);
-  }
-  75% {
-    transform: scale(0.6);
-  }
-  85% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(0.6);
-    opacity: 0;
-  }
-}
-@keyframes kf_zoomin {
-  0% {
-    opacity: 1;
-    transform: scale(1);
-  }
-  100% {
-    opacity: 0;
-    transform: scale(0.2);
-  }
-}
-@keyframes kf_fallup {
-  0% {
-    opacity: 1;
-    transform: scale(1);
-  }
-  40%, 60% {
-    transform: translateY(0) scale(0.4);
-  }
-  100% {
-    opacity: 0;
-    transform: translateY(-100%) scale(0);
-  }
-}
-.nav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  --c-nav-height: 80px;
-  height: var(--c-nav-height);
-  z-index: 1600;
-  background-color: #AFD5D1;
-}
-.nav > .nav-container {
-  width: 100%;
-  height: 100%;
-  max-width: 1024px;
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-}
-.nav .nav-brand > .nav-link {
-  color: #21363B;
-}
-.nav .nav-content {
-  margin-left: auto;
-}
-.nav .nav-toggler {
-  width: 40px;
-  height: 40px;
-  border: 2px solid #578D96;
-  display: none;
-}
-@media only screen and (max-width: 1024px) {
-  .nav .nav-toggler {
-    display: block;
-  }
-}
-
-.menu {
-  display: flex;
-  align-items: center;
-}
-.menu .nav-link {
-  display: inline-block;
-  padding: 20px;
-}
-.menu .menu-item {
-  width: 200px;
-  position: relative;
-  background-color: #75C2C4;
-}
-.menu .menu-item::before {
-  content: "";
-  position: absolute;
-  top: 8px;
-  left: 0;
-  right: 0;
-  width: 50%;
-  height: 30px;
-  display: block;
-  margin: 0 auto;
-  background-color: #619faa;
-}
-.menu .menu-item:nth-child(even) {
-  background-color: #445D61;
-}
-.menu .menu-item > .nav-link.active {
-  background-color: #578D96;
-}
-.menu .menu-sub {
-  position: absolute;
-  left: 0;
-  visibility: hidden;
-  opacity: 0;
-  transition: visibility 0.2s ease, opacity 0.3s linear;
-}
-
-/*# sourceMappingURL=styled.css.map */
+main{height:100vh;overflow:hidden}.loading{position:fixed;z-index:9999;top:0;left:0;right:0;bottom:0}.loading>.span{display:block;position:absolute;background-color:#000;animation-name:kf_default;animation-iteration-count:1;animation-fill-mode:both;animation-duration:1.5s}.loading>.span.zoom-in{animation-name:kf_zoomin}.loading>.span.fall-up{animation-name:kf_fallup}.loading>.span.bounce{animation-name:kf_bounce}@keyframes kf_default{to{opacity:0}}@keyframes kf_bounce{0%{opacity:1;transform:scale(1)}20%{transform:scale(0.8)}40%{transform:scale(1.2)}75%{transform:scale(0.6)}85%{transform:scale(1)}100%{transform:scale(0.6);opacity:0}}@keyframes kf_zoomin{0%{opacity:1;transform:scale(1)}100%{opacity:0;transform:scale(0.2)}}@keyframes kf_fallup{0%{opacity:1;transform:scale(1)}40%,60%{transform:translateY(0) scale(0.4)}100%{opacity:0;transform:translateY(-100%) scale(0)}}.nav{position:fixed;top:0;left:0;width:100%;--c-nav-height: 80px;height:var(--c-nav-height);z-index:1600;background-color:#afd5d1}.nav>.nav-container{width:100%;height:100%;max-width:1024px;margin:0 auto;display:flex;align-items:center}.nav .nav-brand>.nav-link{color:#21363b}.nav .nav-content{margin-left:auto}.nav .nav-toggler{width:40px;height:40px;border:2px solid #578d96;display:none}@media only screen and (max-width: 1024px){.nav .nav-toggler{display:block}}.menu{display:flex;align-items:center}.menu .nav-link{display:inline-block;padding:20px}.menu .menu-item{width:200px;position:relative;background-color:#75c2c4}.menu .menu-item::before{content:"";position:absolute;top:8px;left:0;right:0;width:50%;height:30px;display:block;margin:0 auto;background-color:#619faa}.menu .menu-item:nth-child(even){background-color:#445d61}.menu .menu-item>.nav-link.active{background-color:#578d96}.menu .menu-sub{position:absolute;left:0;visibility:hidden;opacity:0;transition:visibility .2s ease,opacity .3s linear}/*# sourceMappingURL=styled.css.map */
