--- a/BoardCard/css/styled.scss
+++ b/BoardCard/css/styled.scss
@@ -13,7 +13,6 @@ body {
     padding-top: 60px;
     max-width: 640px;
     margin: 0 auto;
-    background-color: #fef;
 }
 
 .timer {
@@ -203,11 +202,14 @@ body {
 
 .noti {
     position: fixed;
-    right: 0;
+    left: 50%;
     top: 100px;
     background-color: #00bfff;
     padding: 4px 10px;
     border-radius: 8px;
+    transform: translate(-50%, 0);
+    max-width: 100%;
+    min-width: 200px;
     color: #fff;
     animation: kf_noti 1s ease 0s 1 both;
 
@@ -314,18 +316,6 @@ body {
     }
 }
 
-.win-rate {
-    text-align: center;
-    color: #00bfff;
-    margin-top: 20px;
-    font-size: 25px;
-
-    &::before {
-        content: "Tỉ lệ thắng";
-        font-size: 16px;
-        margin-right: 4px;
-    }
-}
 
 .let-set-coin {
     text-align: center;
@@ -385,6 +375,43 @@ body {
 
     .button {
         width: calc(50% - 10px);
+    }
+}
+
+.block {
+    width: 100px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    border: 1px solid #aaa;
+    cursor: pointer;
+    color: #aaa;
+
+    &::before {
+        font-size: 30px;
+        font-weight: 700;
+    }
+
+    &.block-comp {
+        &::before {
+            content: 'Cái';
+        }
+    }
+
+    &.block-con {
+        &::before {
+            content: 'Con';
+        }
+    }
+
+    &.active {
+        background-color: #00bfff;
+
+        &::before {
+            color: #fff;
+        }
     }
 }
 
@@ -472,5 +499,30 @@ body {
     @media only screen and (max-width: 640px) {
         width: calc(33% - 10px);
         margin-top: 20px;
+    }
+}
+
+.board-check {
+    display: flex;
+    flex-wrap: wrap;
+
+    span {
+        width: 20px;
+        height: 20px;
+
+        border-radius: 99px;
+        margin: 3px;
+
+        &.win {
+            background-color: green;
+        }
+
+        &.lose {
+            background-color: red;
+        }
+
+        &.equal {
+            background-color: yellow;
+        }
     }
 }
